update v3.4.0 release notes
Change-Id: If59d4f87164433858c4a8eb4c13e12792141a492

--- a/packages/ui-library/src/demo/components/docs/release-notes/v3-4-0.md
+++ b/packages/ui-library/src/demo/components/docs/release-notes/v3-4-0.md
@@ -1,5 +1,21 @@
+
+- [UIP-1354 Displaying errors when service unavailable](https://jira.pingidentity.com/browse/UIP-1354)
+- [UIP-1356 Expanded row busy state doesn't gray out any buttons or tabs](https://jira.pingidentity.com/browse/UIP-1356)
+- [UIP-1419 Fix the FormDropDownList warnings](https://jira.pingidentity.com/browse/UIP-1419)
+- [UIP-1433 Styling issues with ColorPicker](https://jira.pingidentity.com/browse/UIP-1433)
+- [UIP-1459 Modal window height is not configurable](https://jira.pingidentity.com/browse/UIP-1459)
+- [UIP-1465 DropDownList highlight cuts off for scroll](https://jira.pingidentity.com/browse/UIP-1465)
 - [UIP-1466 Read Only text field style](https://jira.pingidentity.com/browse/UIP-1466)
+- [UIP-1468 Provide a way to prevent default for ExpandableRow onDelete event.](https://jira.pingidentity.com/browse/UIP-1468)
+- [UIP-1469 No margin below ExpandableRow title when no subtitle specified](https://jira.pingidentity.com/browse/UIP-1469)
+- [UIP-1475 Add CSS on the color palette to fix color picker of Search in General Branding](https://jira.pingidentity.com/browse/UIP-1475)
 - [UIP-1476 Add name attribute to all form inputs](https://jira.pingidentity.com/browse/UIP-1476)
 - [UIP-1482 Support HTML in page messages](https://jira.pingidentity.com/browse/UIP-1482)
 - [UIP-1483 Fix documentation and code examples for the new Wizard and Tile Selector components](https://jira.pingidentity.com/browse/UIP-1483)
+- [UIP-1484 Conform SCSS to stylelint rules and add stylelint to verify process](https://jira.pingidentity.com/browse/UIP-1484)
+- [UIP-1485 Add window events for modal and wizard open/close actions](https://jira.pingidentity.com/browse/UIP-1485)
 - [UIP-1489 Fix data-id handling on TileSelector component](https://jira.pingidentity.com/browse/UIP-1489)
+- [UIP-1490 Fix v2 wizard step data-id handling](https://jira.pingidentity.com/browse/UIP-1490)
+- [UIP-1491 Change input vertical spacing from 20px to 25px --- .input-row class as well](https://jira.pingidentity.com/browse/UIP-1491)
+- [UIP-1494 Fix bug caused when using logic to conditionally render wizard steps / Improve the new wizard's demo page](https://jira.pingidentity.com/browse/UIP-1494)
+- [UIP-1502 Add support for 5 rocker buttons in a set (previously only 5)](https://jira.pingidentity.com/browse/UIP-1502)
