update 3.5 release notes
Change-Id: Ib62d783dd403351e3dcb4073dae957a1e270ac06

--- a/packages/ui-library/src/demo/components/docs/release-notes/v3-5-0.md
+++ b/packages/ui-library/src/demo/components/docs/release-notes/v3-5-0.md
@@ -1,4 +1,25 @@
+- [UIP-1249 Create hero chart for dashboard](https://jira.pingidentity.com/browse/UIP-1249)
+- [UIP-1329 Incorrect Dependency Scopes](https://jira.pingidentity.com/browse/UIP-1329)
+- [UIP-1396 Extract ConfirmDeleteDialog from ExpandableRow](https://jira.pingidentity.com/browse/UIP-1396)
+- [UIP-1467 Create code component](https://jira.pingidentity.com/browse/UIP-1467)
 - [UIP-1481 Stat Card Component](https://jira.pingidentity.com/browse/UIP-1481)
+- [UIP-1493 Alter Library to support new "More on this topic" link](https://jira.pingidentity.com/browse/UIP-1493)
+- [UIP-1499 Align the ExpandableRow styling with designs](https://jira.pingidentity.com/browse/UIP-1499)
+- [UIP-1501 Component Documentation is not working for some components](https://jira.pingidentity.com/browse/UIP-1501)
+- [UIP-1503 Create a new Button component](https://jira.pingidentity.com/browse/UIP-1503)
+- [UIP-1504 Rearrange "CSS Tips & Tricks" content into new categories](https://jira.pingidentity.com/browse/UIP-1504)
+- [UIP-1506 Give popovers and dropdowns a flexible width](https://jira.pingidentity.com/browse/UIP-1506)
+- [UIP-1508 Add ellipsis loading state to new button component](https://jira.pingidentity.com/browse/UIP-1508)
+- [UIP-1509 Button component types and classes](https://jira.pingidentity.com/browse/UIP-1509)
+- [UIP-1511 Add demo page for the Link component](https://jira.pingidentity.com/browse/UIP-1511)
+- [UIP-1512 Create a new header text component](https://jira.pingidentity.com/browse/UIP-1512)
+- [UIP-1515 Wizard-v2 pane won't scroll with more than a full screen of content in Firefox](https://jira.pingidentity.com/browse/UIP-1515)
+- [UIP-1520 Authentication Policy Template](https://jira.pingidentity.com/browse/UIP-1520)
 - [UIP-1521 Add prop to ButtonBar to unfix it from the bottom](https://jira.pingidentity.com/browse/UIP-1521)
+- [UIP-1522 Let us adjust the left edge of Messages with some CSS](https://jira.pingidentity.com/browse/UIP-1522)
 - [UIP-1523 Give links highlight color and remove underline from linked icons](https://jira.pingidentity.com/browse/UIP-1523)
+- [UIP-1524 Filled cog icon](https://jira.pingidentity.com/browse/UIP-1524)
+- [UIP-1525 Tweak checkbox placement](https://jira.pingidentity.com/browse/UIP-1525)
+- [UIP-1526 EditSection component](https://jira.pingidentity.com/browse/UIP-1526)
+- [UIP-1527 Node component](https://jira.pingidentity.com/browse/UIP-1527)
 - [UIP-1529 PageSection component](https://jira.pingidentity.com/browse/UIP-1529)
