add jira ticket missing from the 3.8.0 release notes (was giving a label instead of a fix version)
Change-Id: I325b5607f2d8b5da3567986d8b8a48f7703c576a

--- a/packages/ui-library/src/demo/components/docs/release-notes/v3-8-0.md
+++ b/packages/ui-library/src/demo/components/docs/release-notes/v3-8-0.md
@@ -6,6 +6,7 @@
 - [UIP-1563 Create an alternate styling of the InlineMessages component](https://jira.pingidentity.com/browse/UIP-1563)
 - [UIP-1564 Add error state to the HeroChart and StatCard](https://jira.pingidentity.com/browse/UIP-1564)
 - [UIP-1565 Adjust HeroChart so that x-axis labels do not auto-hide or overlap with many data-points](https://jira.pingidentity.com/browse/UIP-1565)
+- [UIP-1567 Fix bad hover behavior on the DropdownList none option](https://jira.pingidentity.com/browse/UIP-1567)
 - [UIP-1569 Surface the selected date range as a top-level prop on the HeroChart component](https://jira.pingidentity.com/browse/UIP-1569)
 - [UIP-1571 Stat card shows in reverse when flipped in Safari](https://jira.pingidentity.com/browse/UIP-1571)
 - [UIP-1572 Create a page-level spinner component per designs](https://jira.pingidentity.com/browse/UIP-1572)
