--- a/packages/end-user/src/demo/Catalog.mdx
+++ b/packages/end-user/src/demo/Catalog.mdx
@@ -1,7 +1,9 @@
 import Button from '../components/Button';
 import Card from '../components/Card';
 import Checkbox from '../components/Checkbox';
+import Dropdown from '../components/Dropdown';
 import Feedback from '../components/Feedback';
+import FloatLabelDropdown from '../components/FloatLabelDropdown';
 import FloatLabelPasswordInput from '../components/FloatLabelPasswordInput';
 import FloatLabelTextInput from '../components/FloatLabelTextInput';
 import Form from '../components/Form';
@@ -37,46 +39,6 @@ The logo that sits atop the form.
     <Heading>This Would Be a Page Title</Heading>
 </ComponentDemo>
 
-## Inputs
-
-<ComponentDemo>
-    <TextInput id="username1"/>
-</ComponentDemo>
-
-### Error state
-
-<ComponentDemo>
-    <TextInput id="username2" error/>
-</ComponentDemo>
-
-### Success state
-
-<ComponentDemo>
-    <TextInput id="username3" success/>
-</ComponentDemo>
-
-### Primary input
-
-<ComponentDemo>
-    <TextInput id="primary" defaultValue="495837" primary/>
-</ComponentDemo>
-
-### Float Label Inputs
-
-<ComponentDemo>
-    <FloatLabelTextInput label="Username" id="username4"/>
-</ComponentDemo>
-
-<ComponentDemo>
-    <FloatLabelPasswordInput label="Password" id="password1"/>
-</ComponentDemo>
-
-IE & Edge don't support the CSS-only solution for float labels, but we can simulate the "placeholder-shown" pseudo-selector with a "placeholder-shown" class. (View in IE or Edge to see the difference.)
-
-<ComponentDemo>
-    <FloatLabelTextInput inputClassName="placeholder-shown" label="Username" id="username5"/>
-</ComponentDemo>
-
 ## Button
 
 ### Standard button. Used for secondary actions.
@@ -105,73 +67,6 @@ Cards sit above the customized background and contain all our UI elements.
 
 <ComponentDemo>
     <Card>The content inside a card</Card>
-</ComponentDemo>
-
-## The Sign-On Form
-
-<ComponentDemo>
-    <Card>
-            <Logo src="ping-logo.svg"/>
-        <Form>
-            <FloatLabelTextInput label="Username" id="username6"/>
-            <FloatLabelPasswordInput label="Password" id="password2"/>
-            <div><Checkbox label="Remember me"/></div>
-            <Button label="Sign On" primary/>
-        </Form>
-    </Card>
-</ComponentDemo>
-
-### With an error
-<ComponentDemo>
-    <Card>
-        <Logo src="ping-logo.svg"/>
-        <Feedback type="error">Cannot sign on. There is a problem with either your username or password.</Feedback>
-        <Form>
-            <FloatLabelTextInput label="Username" id="username7"/>
-            <FloatLabelPasswordInput label="Password" id="password3"/>
-            <div><Checkbox label="Remember me"/></div>
-            <Button label="Sign On" primary/>
-        </Form>
-    </Card>
-</ComponentDemo>
-
-### Another logo
-<ComponentDemo>
-    <Card>
-        <Logo src="jj-logo.png"/>
-        <Form>
-            <FloatLabelTextInput label="Username" id="username8"/>
-            <FloatLabelPasswordInput label="Password" id="password4"/>
-            <div><Checkbox label="Remember me"/></div>
-            <Button label="Sign On" primary/>
-        </Form>
-    </Card>
-</ComponentDemo>
-
-### Just the password
-<ComponentDemo>
-    <Card>
-        <Logo src="ping-logo.svg"/>
-        <Heading>Hello Cindy Lou Who,</Heading>
-        <TextBlock>Please enter your password below:</TextBlock>
-        <Form>
-            <FloatLabelPasswordInput label="Password" id="password5"/>
-            <Button label="Sign On" primary disabled/>
-        </Form>
-        <TextBlock size="small">Not Cindy Lou? <a href="#">Switch Accounts</a></TextBlock>
-    </Card>
-</ComponentDemo>
-
-### Reset password
-<ComponentDemo>
-    <Card>
-        <Logo src="ping-logo.svg"/>
-        <Feedback type="error">Too many unsuccessful sign-on attempts. Please reset your password.</Feedback>
-        <Form>
-            <Button label="Reset Password" primary/>
-        </Form>
-        <TextBlock size="small">No account? <a href="#">Register Now</a></TextBlock>
-    </Card>
 </ComponentDemo>
 
 ## Feedback Messages
@@ -249,18 +144,4 @@ Error message
             }
         ]} />
     </div>
-</ComponentDemo>
-
-<ComponentDemo>
-    <Card>
-        <Logo src="ping-logo.svg"/>
-        <IconFeedback type="error">Error</IconFeedback>
-        <TextBlock size="small">
-            <p>The actor attempting to perform the request is not authorized.</p>
-            <p><TextStyle muted>
-                id: 2e0b1d51-3409-46dd-ac5e-d49cf5213de4<br />
-                code: ACCESS_FAILED
-            </TextStyle></p>
-        </TextBlock>
-    </Card>
 </ComponentDemo>
