--- a/packages/end-user/src/demo/Layouts.mdx
+++ b/packages/end-user/src/demo/Layouts.mdx
@@ -111,3 +111,41 @@ import ComponentDemo from './components/ComponentDemo';
         <Button label="Sign On"/>
     </Card>
 </ComponentDemo>
+
+<ComponentDemo>
+    <Card>
+        <Logo src="ping-logo.svg"/>
+        <Heading>Change Password</Heading>
+        <Feedback type="alert">Your password has expired. Please create a new one.</Feedback>
+        <Form>
+            <FloatLabelPasswordInput label="Current Password" id="password" />
+            <FloatLabelPasswordInput label="New Password" id="new">
+                <Tooltip>
+                    <Heading level={4}>Password Must Have at Least:</Heading>
+                    <Requirements
+                        requirements={[
+                            {
+                                name: '6 characters',
+                                status: 'no',
+                            },
+                            {
+                                name: 'At least 1 of ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz',
+                                status: 'yes',
+                            },
+                            {
+                                name: '1 lowercase letter',
+                                status: 'yes',
+                            },
+                            {
+                                name: '1 number (0-9)',
+                                status: 'no',
+                            },
+                        ]}
+                    />
+                </Tooltip>
+            </FloatLabelPasswordInput>
+            <FloatLabelPasswordInput label="Verify New Password" id="verify" />
+            <Button label="Save" primary disabled />
+        </Form>
+    </Card>
+</ComponentDemo>
