--- a/packages/end-user/src/demo/Layouts.mdx
+++ b/packages/end-user/src/demo/Layouts.mdx
@@ -140,6 +140,11 @@ import ComponentDemo from './components/ComponentDemo';
                                 name: '1 number (0-9)',
                                 status: 'no',
                             },
+                            {
+                                name: `Here is a very long requirement that hopefully won't come into play much
+                                    but let's still make sure we support having this much content show.`,
+                                status: 'no',
+                            },
                         ]}
                     />
                 </Tooltip>
