Changes to password requirements

--- a/packages/end-user/src/demo/Layouts.mdx
+++ b/packages/end-user/src/demo/Layouts.mdx
@@ -121,7 +121,7 @@ import ComponentDemo from './components/ComponentDemo';
             <FloatLabelPasswordInput label="Current Password" id="password" />
             <FloatLabelPasswordInput label="New Password" id="new">
                 <Tooltip>
-                    <Heading level={4}>Password Must Have at Least:</Heading>
+                    <Heading level={4}>Minimum Password Requirements:</Heading>
                     <Requirements
                         requirements={[
                             {
