Normalized the icons a bit and added the small variant of IconFeedback

--- a/packages/end-user/src/demo/Catalog.mdx
+++ b/packages/end-user/src/demo/Catalog.mdx
@@ -81,9 +81,17 @@ Error message
     <Feedback type="alert">Your password has expired. Please create a new one.</Feedback>
 </ComponentDemo>
 
+<ComponentDemo>
+    <Feedback type="success">You've registered!</Feedback>
+</ComponentDemo>
+
 ## Icon Feedback
 <ComponentDemo>
     <IconFeedback type="success">Authenticated</IconFeedback>
+</ComponentDemo>
+
+<ComponentDemo>
+    <IconFeedback type="success" small>Authenticated</IconFeedback>
 </ComponentDemo>
 
 ## Password Requirements
