--- a/packages/end-user/src/demo/Layouts.mdx
+++ b/packages/end-user/src/demo/Layouts.mdx
@@ -1,4 +1,5 @@
 import Button from '../components/Button';
+import ButtonSet from '../components/ButtonSet';
 import Card from '../components/Card';
 import Checkbox from '../components/Checkbox';
 import Dropdown from '../components/Dropdown';
@@ -154,3 +155,16 @@ import ComponentDemo from './components/ComponentDemo';
         </Form>
     </Card>
 </ComponentDemo>
+
+<ComponentDemo>
+    <Card>
+        <Logo src="ping-logo.svg"/>
+        <IconFeedback type="success" small>Registered</IconFeedback>
+        <TextBlock>Now that you've registered, you can either continue on or edit your profile.</TextBlock>
+        <ButtonSet>
+            <Button label="Edit Profile"/>
+            <Button label="Continue" primary/>
+        </ButtonSet>
+    </Card>
+</ComponentDemo>
+
