UIP-2090 New className for ExpandableRow behind flag
Change-Id: Ife6c23ca44159141e8f71b6e8cfbc1598ed92294

--- a/packages/ui-library/src/demo/components/docs/cannonball/Changes.mdx
+++ b/packages/ui-library/src/demo/components/docs/cannonball/Changes.mdx
@@ -5,3 +5,11 @@
 **V3 Behavior:** Displays a block element with an icon that has right margin unless `type` is set to "inline".
 
 **Recommendation:** Set `type` to either "leading" or "inline".
+
+### ExpandableRow
+
+**V4 Behavior:** Each ExpandableRow will use a standalone CSS class to style them even out of context.
+
+**V3 Behavior:** ExpandableRows get their styling from a surrounding element.
+
+**Recommendation:** Add the flag 'expandable-row-class' to each ExpandableRow.
