UIP-2088 Fixed messages constants behind flag
Change-Id: I7bcf6b549c588db529d82a18dc95009eb4bf715b

--- a/packages/ui-library/src/demo/components/docs/cannonball/Changes.mdx
+++ b/packages/ui-library/src/demo/components/docs/cannonball/Changes.mdx
@@ -37,3 +37,11 @@
 **V3 Behavior:** Displays a block element with a link inside it unless it:
 * has `children` or some `type` other than block is set
 * doesn't have `title` or `count` set
+
+### Messages
+
+**V4 Behavior:** The WARNING message type will show a yellow banner.
+
+**V3 Behavior:** The WARNING message type shows a red error banner.
+
+**Recommendation:** Use NOTICE instead of WARNING. (Or set a flag for "fixed-messages-constants".)
