UIP-2093 Discard button is styled like a cancel button behind flag
Change-Id: I085816b70ae8f646cb2f19bffa7fddc644eba3f9

--- a/packages/ui-library/src/demo/components/docs/cannonball/Changes.mdx
+++ b/packages/ui-library/src/demo/components/docs/cannonball/Changes.mdx
@@ -13,3 +13,11 @@
 **V3 Behavior:** ExpandableRows get their styling from a surrounding element.
 
 **Recommendation:** Add the flag 'expandable-row-class' to each ExpandableRow.
+
+### ButtonBar
+
+**V4 Behavior:** The discard button will be styled the same as a cancel button.
+
+**V3 Behavior:** The discard button is styled like a standard button.
+
+**Recommendation:** Set the 'fix-discard-button' flag for ButtonBar or use the props for a cancel button instead.
