UIP-2119: Set up DetailsTooltip with progressive statefulness
Change-Id: Ie92c1fc3e60bbf3177c8ef60a646e76ce7283766

--- a/packages/ui-library/src/demo/components/docs/cannonball/Changes.mdx
+++ b/packages/ui-library/src/demo/components/docs/cannonball/Changes.mdx
@@ -50,3 +50,9 @@
 * **V4 Behavior:** When provided, the `page` prop will control the current page of the component. Otherwise, the component will handle paging internally.
 * **V3 Behavior:** The `stateless` prop decides whether or not paging will be controlled by the component.
 * **Recommendation:** Set the 'p-stateful' flag.
+
+### DetailsTooltip
+
+* **V4 Behavior:** When provided, the `open` prop will control whether the component is open. Otherwise, the component will handle open and closing internally.
+* **V3 Behavior:** The `stateless` prop decides whether or not the open state will be controlled by the component.
+* **Recommendation:** Set the "p-stateful" flag.
