--- a/packages/ui-library/src/demo/components/docs/cannonball/Changes.mdx
+++ b/packages/ui-library/src/demo/components/docs/cannonball/Changes.mdx
@@ -1,50 +1,44 @@
-### Icon
+### Button
 
-**V4 Behavior:** Displays an icon with only a SPAN tag unless it contains `children` or `type` is set to "leading".
-
-**V3 Behavior:** Displays a block element with an icon that has right margin unless `type` is set to "inline".
-
-**Recommendation:** Set `type` to either "leading" or "inline".
-
-### ExpandableRow
-
-**V4 Behavior:** Each ExpandableRow will use a standalone CSS class to style them even out of context.
-
-**V3 Behavior:** ExpandableRows get their styling from a surrounding element.
-
-**Recommendation:** Add the flag 'expandable-row-class' to each ExpandableRow.
+* **V4 Behavior:** All buttons, including those with the 'add' icon, will have margin on their right side unless other styles from, for instance, a container remove it.
+* **V3 Behavior:** Buttons with the icon "add" have their margin removed.
+* **Recommendation:** Set the 'add-button-margin' flag to keep the margin or set the `noSpacing` prop to true on a button to keep it removed.
 
 ### ButtonBar
 
-**V4 Behavior:** The discard button will be styled the same as a cancel button.
+* **V4 Behavior:** The discard button will be styled the same as a cancel button.
+* **V3 Behavior:** The discard button is styled like a standard button.
+* **Recommendation:** Set the 'fix-discard-button' flag for ButtonBar or use the props for a cancel button instead.
 
-**V3 Behavior:** The discard button is styled like a standard button.
+### Calendar
 
-**Recommendation:** Set the 'fix-discard-button' flag for ButtonBar or use the props for a cancel button instead.
+* **V4 Behavior:** When provided, the `date` prop will control the value of the component.
+* **V3 Behavior:** The `date` prop only updates the component when it changes.
+* **Recommendation:** Set the 'p-stateful' flag.
 
-### Button
+### ExpandableRow
 
-**V4 Behavior:** All buttons, including those with the 'add' icon, will have margin on their right side unless other styles from, for instance, a container remove it.
+* **V4 Behavior:** Each ExpandableRow will use a standalone CSS class to style them even out of context.
+* **V3 Behavior:** ExpandableRows get their styling from a surrounding element.
+* **Recommendation:** Add the flag 'expandable-row-class' to each ExpandableRow.
 
-**V3 Behavior:** Buttons with the icon "add" have their margin removed.
+### Icon
 
-**Recommendation:** Set the 'add-button-margin' flag to keep the margin or set the `noSpacing` prop to true on a button to keep it removed.
+* **V4 Behavior:** Displays an icon with only a SPAN tag unless it contains `children` or `type` is set to "leading".
+* **V3 Behavior:** Displays a block element with an icon that has right margin unless `type` is set to "inline".
+* **Recommendation:** Set `type` to either "leading" or "inline".
 
 ### Link
 
-**V4 Behavior:** Displays a link with only an A tag unless `type` is set to "block".
-
-**V3 Behavior:** Displays a block element with a link inside it unless it:
-* has `children` or some `type` other than block is set
-* doesn't have `title` or `count` set
+* **V4 Behavior:** Displays a link with only an A tag unless `type` is set to "block".
+* **V3 Behavior:** Displays a block element with a link inside it unless it:
+    * has `children` or some `type` other than block is set
+    * doesn't have `title` or `count` set
 
 ### Messages
-
-**V4 Behavior:** The WARNING message type will show a yellow banner.
-
-**V3 Behavior:** The WARNING message type shows a red error banner.
-
-**Recommendation:** Use NOTICE instead of WARNING. (Or set a flag for "fixed-messages-constants".)
+* **V4 Behavior:** The WARNING message type will show a yellow banner.
+* **V3 Behavior:** The WARNING message type shows a red error banner.
+* **Recommendation:** Use NOTICE instead of WARNING. (Or set a flag for 'fixed-messages-constants'.)
 
 ### FormTextArea
 * **V4 Behavior:** The component controls the state of `value` if it's not defined as a prop. The initial value can be set with `initialState.value`.
