UIP-2179 changing header and left nav bar to be default updated and have a legacy prop
Change-Id: I87f915f8a93bd8f36ffc16882a319e717f7bb14e

--- a/packages/ui-library/src/demo/components/docs/cannonball/Changes.mdx
+++ b/packages/ui-library/src/demo/components/docs/cannonball/Changes.mdx
@@ -32,6 +32,19 @@
 * **V3 Behavior:** The `stateless` prop determines whether these props are controlled by the component or not.
 * **Recommendation:** Set the 'p-stateful' flag.
 
+### HeaderBar
+
+* **V4 Behavior:** Will default to updated style unless prop "legacy" is set to true.
+* **V3 Behavior:** Defaults to legacy style unless prop "updated" is set to true.
+* **Recommendation:** Set either updated or legacy to true.
+
+### LeftNavBar
+
+* **V4 Behavior:** Will default to updated style unless prop "legacy" is set to true.
+* **V3 Behavior:** Defaults to legacy style unless prop "updated" is set to true.
+* **Recommendation:** Set either updated or legacy to true.
+
+
 ### Icon
 
 * **V4 Behavior:** Displays an icon with only a SPAN tag unless it contains `children` or `type` is set to "leading".
