--- a/packages/ui-library/src/demo/components/docs/cannonball/Changes.mdx
+++ b/packages/ui-library/src/demo/components/docs/cannonball/Changes.mdx
@@ -16,6 +16,11 @@
 * **V3 Behavior:** The `date` prop only updates the component when it changes.
 * **Recommendation:** Set the 'p-stateful' flag.
 
+### ColorPicker
+* **V4 Behavior:** The component controls the state of `color` and `open` if they're not defined as props. The initial values can be set with `initialState.value`. Also, an internal error message is managed for invalid hex values.
+* **V3 Behavior:** The `stateless` prop determines whether `open` and `errorMessage` are controlled by the component or not.
+* **Recommendation:** Set the 'p-stateful' flag.
+
 ### ExpandableRow
 
 * **V4 Behavior:** Each ExpandableRow will use a standalone CSS class to style them even out of context.
