UIP-2307 Added type prop to DetailsTooltip, so it can be used to trigger the alert style
Change-Id: Id0f72b8eec2b182aaf5f41c70a286ccecdc7a28a

--- a/packages/ui-library/src/demo/components/docs/cannonball/Changes.mdx
+++ b/packages/ui-library/src/demo/components/docs/cannonball/Changes.mdx
@@ -88,6 +88,10 @@
 * **V3 Behavior:** `positionClassName` is added to classes of component. CSS does the positioning.
 * **Recommendation:** Use `placement` instead of `positionClassName`.
 
+* **V4 Behavior:** The alert style of the DetailsTooltip will be triggered only by setting `type` to "alert".
+* **V3 Behavior:** Adding "alert" to `positionClassName` triggers alert styling.
+* **Recommendation:** Use `type` = "alert" instead of `positionClassName`.
+
 ### RockerButton
 * **V4 Behavior:** When provided, the `selectedIndex` prop will control which index is selected. Otherwise, the component will handle which index is selected internally.
 * **V3 Behavior:** The `stateless` prop decides whether or not the index state will be controlled by the component.
