UIP-2107: Set up PhoneInput for progressive state
Change-Id: I8747caf741e5dc3ac7137d30953683dc01375733

--- a/packages/ui-library/src/demo/components/docs/cannonball/Changes.mdx
+++ b/packages/ui-library/src/demo/components/docs/cannonball/Changes.mdx
@@ -141,6 +141,11 @@
 * **V3 Behavior:** Defaults to legacy style unless prop "updated" is set to true.
 * **Recommendation:** Set either updated or legacy to true.
 
+### I18nPhoneInput
+* **V4 Behavior:** The component controls the state of `open`, `searchIndex`, `searchString`, and `searchTime` if they're not defined as props. The initial values can be set with `initialState`.
+* **V3 Behavior:** The `stateless` prop determines whether these props are controlled by the component or not.
+* **Recommendation:** Set the 'p-stateful' flag.
+
 ### Icon
 * **V4 Behavior:** Displays an icon with only a SPAN tag unless it contains `children` or `type` is set to "leading".
 * **V3 Behavior:** Displays a block element with an icon that has right margin unless `type` is set to "inline".
