UIP-2396 Code changes to remove Cannonball warning from demos. (I skipped the templates for now.)
Change-Id: Ie5d69463b5dac908085386b8a7be81bfa0d375b1

--- a/packages/ui-library/src/demo/components/docs/cannonball/Changes.mdx
+++ b/packages/ui-library/src/demo/components/docs/cannonball/Changes.mdx
@@ -239,6 +239,7 @@
 * **add-button-margin**
 * **expandable-row-class**
 * **fix-discard-button**
-* **fix-message-constants**
+* **fixed-messages-constants**
 * **p-stateful**
 * **use-portal**
+* **true-default**
