UIP-2407 Dashboard cards max-width 100%
Change-Id: Icfa1750cb8c957c168d94300eacf9b3c2ab33405

--- a/packages/ui-library/src/demo/components/docs/release-notes/v3-41-0.md
+++ b/packages/ui-library/src/demo/components/docs/release-notes/v3-41-0.md
@@ -4,7 +4,7 @@
 - [UIP-2107 Add progressive state to the PhoneInput component](https://jira.pingidentity.com/browse/UIP-2107)
 - [UIP-2120 Accommodate the positioning of text/buttons/etc next to a text input](https://jira.pingidentity.com/browse/UIP-2120)
 - [UIP-2199 TranslationPicker behaves oddly in some cases](https://jira.pingidentity.com/browse/UIP-2199)
-- [UIP-2233 Make dashboard cards more responsive](https://jira.pingidentity.com/browse/UIP-2233)
+- [UIP-2407 Dashboard Cards shouldn't grow beyond their container](https://jira.pingidentity.com/browse/UIP-2407)
 - [UIP-2234 Remove the radio button highlight on focus by clicking](https://jira.pingidentity.com/browse/UIP-2234)
 - [UIP-2246 I18n Phone Input (w/ flags) has 4-digit country codes in some cases](https://jira.pingidentity.com/browse/UIP-2246)
 - [UIP-2295 Add autoFocus property for MultiDrag, Radio Input and Rocker Button components](https://jira.pingidentity.com/browse/UIP-2295)
